--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "SecretKey": "BuCokGizliBirAnahtarOlmali12345!", 
+    "Issuer": "TaskApi",
+    "Audience": "TaskApiUsers",
+    "ExpiryMinutes": 60
+  },
   "AllowedHosts": "*"
 }
